# true_jumper

./: Cargo.toml  cargotree.txt  notes.txt
assets/: tile-based-game.ldtk
assets/json_files/: json_test.json
assets/tile-based-game/simplified/Level_0/: Walls.csv  data.json
assets/tile-based-game/simplified/Level_1/: Walls.csv  data.json
assets/tile-based-game/simplified/Level_2/: Walls.csv  data.json
src/: components.rs  main.rs  resources.rs  systems.rs
src/game/: components.rs  events.rs  json_test.json  mod.rs  resources.rs  systems.rs
src/game/level_loader/: mod.rs  resources.rs  systems.rs
src/game/player/: components.rs  events.rs  mod.rs  resources.rs  systems.rs
src/game/player/json_data/: player_hitbox_data.json  player_sprite_sheet_indices.json
src/main_menu/: components.rs  mod.rs  styles.rs
src/main_menu/systems/: interactions.rs  layout.rs  mod.rs
