[package]
name = "true_jumper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.13.0"
serde_json = "1.0"
serde = "1.0.197"
bevy_ecs_tilemap = "0.12.0"
bevy_ecs_ldtk = "0.9.0"
bevy_2d_collisions = "0.3.2"
#bevy_common_assets = "0.10.0"
csv = "1.3.0"
#bevy_animations = "0.5.53"
#benimator = "4.1.3"


#[patch.crates-io]
#bevy = { git = "https://github.com/bevyengine/bevy.git", branch = "release-0.13.0"}